# dd360

./: README.md  Reto de Data Science (1).docx
dd360_project/: Makefile  README.md  pyproject.toml  requirements.txt
dd360_project/data/interim/: cleaned.parquet
dd360_project/data/processed/: final_df.parquet
dd360_project/data/raw/: cuahutemoc_properties.csv
dd360_project/dd360/: __init__.py  compare.py  config.py  dataset.py  experiments.py  extract.py  feature_importance.py  features.py  plots.py  transform.py
dd360_project/dd360/modeling/: predict.py  train.py
dd360_project/docs/: mkdocs.yml
dd360_project/docs/docs/: index.md
dd360_project/notebooks/: 1.EDA.ipynb  2.Data_Cleaning.ipynb  3.Data_Processing.ipynb  4.Feature_Importance.ipynb
dd360_project/references/: data_dictionary.txt
dd360_project/webapp/: app.py
