[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dd360"
version = "0.0.1"
description = "Python project to find similar houses/apartments based on an input"
authors = [
  { name = "Misael Delgado" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.9.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["dd360"]
force_sort_within_sections = true
